--- a/loki_config.yml
+++ b/loki_config.yml
@@ -38,3 +38,11 @@ schema_config:
       index:
         prefix: index_
         period: 24h
+
+    - from: "2024-05-16"
+      store: tsdb
+      object_store: filesystem
+      schema: v13
+      index:
+        prefix: index_
+        period: 24h
